@@ -2,6 +2,7 @@ Revision history for Devel-FindPerl
 
 {{$NEXT}}
           Cache the results of find_perl_interpreter
+          Don't try absolute path twice
 
 0.005     2012-10-06 00:14:49 Europe/Amsterdam
           Explicitly load File::Basename
